# t-rader

./: .copier-answers.yml  .env  .env.example  .gitignore  .mise.toml  .prettierignore  CLAUDE.md  README.md  codecov.yml  docker-compose.infra.yml  docker-compose.yml  lefthook.yml  openapi.json  package.json  pnpm-lock.yaml  renovate.json5  sgconfig.yml
.claude/: settings.json
.gemini/: styleguide.md
.github/workflows/: docker-build.yml  docker-publish.yml  renovate-auto-merge.yml  storybook.yml  test.yml
.sg/rules/: no-assert-contains.yml  prefer-indoc.yml
.sg/tests/: no-assert-contains-test.yml  prefer-indoc-test.yml
.sg/tests/__snapshots__/: no-assert-contains-snapshot.yml  prefer-indoc-snapshot.yml
backend/: .gitignore  Cargo.toml  Dockerfile  clippy.toml  openapi.json  schemathesis.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260215_092115_initial_schema.rs
backend/migrations/: 20260215000002_create_instruments.sql  20260215000003_create_watchlists.sql  20260215000004_create_watchlist_items.sql  20260215000005_create_bars.sql  20260215000006_create_bars_hypertable.sql  20260215092115_initial_schema.sql
backend/scripts/: generate-entities.sh
backend/src/: cli.rs  error.rs  extractors.rs  lib.rs  main.rs  middleware.rs  models.rs  schemas.rs  testing.rs
backend/src/data_provider/: mock.rs  mod.rs
backend/src/data_provider/jquants/: mock.rs  mod.rs  response.rs  tests.rs
backend/src/entities/: bar.rs  bars.rs  instrument.rs  instruments.rs  mod.rs  prelude.rs  watchlist.rs  watchlist_item.rs  watchlist_items.rs  watchlists.rs
backend/src/handlers/: bars.rs  mod.rs  watchlists.rs
backend/src/models/: bar.rs  instrument.rs  mod.rs  watchlist.rs
backend/src/repositories/: bars.rs
backend/src/services/: backfill.rs
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: main.tsx
frontend/src/__tests__/: navigation-integration.test.tsx
frontend/src/components/: add-instrument-form.stories.tsx  add-instrument-form.tsx  app-shell.stories.tsx  app-shell.tsx  app-sidebar.stories.tsx  app-sidebar.tsx  candlestick-chart.stories.tsx  candlestick-chart.tsx  chart-market-depth-panel.stories.tsx  chart-market-depth-panel.tsx  chat-sidebar.stories.tsx  chat-sidebar.test.tsx  chat-sidebar.tsx  error-fallback.stories.tsx  error-fallback.test.tsx  error-fallback.tsx  placeholder-page.stories.tsx  placeholder-page.test.tsx  placeholder-page.tsx  timeframe-selector.stories.tsx  timeframe-selector.tsx  watchlist-item-list.stories.tsx  watchlist-item-list.tsx  watchlist-item-row.stories.tsx  watchlist-item-row.tsx  watchlist-selector.stories.tsx  watchlist-selector.tsx
frontend/src/hooks/: use-instrument-names.ts  use-mobile.ts
frontend/src/lib/: chart-utils.ts
frontend/src/routes/: __root.tsx  index.tsx  trades.tsx
kubernetes/: backend-deployment.yaml  backend-secret.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml
pr-preview/pr-76/: iframe.html  index.html  index.json  project.json
pr-preview/pr-76/assets/: index-9aaNveEi.js  (+48 more)
scripts/: bootstrap  generate-openapi-types
src/: error.rs  lib.rs  main.rs
src/data_provider/: mod.rs
src/handlers/: watchlists.rs
src/models/: bar.rs  instrument.rs  mod.rs
tests/: watchlists.rs
(+12 files in other folders)
