[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "=0.8.8"
chrono = { version = "=0.4.43", default-features = false, features = ["serde"] }
rust_decimal = { version = "=1.40.0", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sqlx = { version = "=0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "rust_decimal", "chrono", "migrate"] }
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }

[dev-dependencies]
rstest = "=0.26.1"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
