[workspace]
members = [".", "migration"]

[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "=0.8.8"
chrono = { version = "=0.4.43", default-features = false, features = ["serde"] }
clap = { version = "=4.5.58", features = ["derive"] }
migration = { path = "migration" }
rust_decimal = { version = "=1.40.0", features = ["serde-float"] }
sea-orm = { version = "=2.0.0-rc.32", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-chrono",
    "with-uuid",
    "with-rust_decimal",
    "macros",
] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
reqwest = { version = "=0.13.2", default-features = false, features = [
    "json",
    "rustls-tls",
] }
utoipa = { version = "=5.4.0", features = [
    "chrono",
    "uuid",
    "decimal",
    "axum_extras",
] }
utoipa-axum = "=0.2.0"
utoipa-swagger-ui = { version = "=9.0.2", features = ["axum"] }
percent-encoding = "=2.3.2"
uuid = { version = "=1.21.0", features = ["serde"] }

[dev-dependencies]
wiremock = "=0.6.5"
axum-test = "=18.7.0"
rstest = "=0.26.1"
sea-orm = { version = "=2.0.0-rc.32", features = ["mock"] }
tokio = { version = "=1.49.0", features = ["test-util"] }
sqlx = { version = "=0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "migrate",
] }

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
